[tool.poetry]
name = "american-express-kaggle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kaggle = "^1.5.12"
black = {extras = ["jupyter"], version = "^22.6.0"}
jupyter = "^1.0.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
